--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "new_os",
+  "name": "new_site",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://spekman.github.io/new_site",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "react": "^19.1.0",
@@ -22,6 +24,7 @@
     "eslint": "^9.29.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "gh-pages": "^6.3.0",
     "globals": "^16.2.0",
     "vite": "^7.0.0"
   }
