--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-draggable": "^4.5.0"
+    "react-draggable": "^4.5.0",
+    "react-rnd": "^10.5.2",
+    "react-router-dom": "^7.6.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
